--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "node -e \"const os=require('os'),fs=require('fs'),p=require('path');if(os.platform()!=='win32'){const d=p.join('node_modules','.bin');if(fs.existsSync(d)){for(const f of fs.readdirSync(d)){try{fs.chmodSync(p.join(d,f),0o755);}catch{}}}}\""
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
+    "react-dom": "^18.3.1",
     "vite": "^5.4.21"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
